--- a/index.html
+++ b/index.html
@@ -5,10 +5,160 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="dist/css/style.css" />
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+			integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
+			crossorigin="anonymous"
+		/>
 		<title>Orinoco</title>
 	</head>
 	<body>
-		<h1>Hello World !</h1>
+		<header>
+			<nav>
+				<ul>
+					<li>Logo</li>
+					<li>Panier</li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<!--Container for all products-->
+			<div class="container">
+				<div class="row row-cols-1 row-cols-md-3 g-4">
+					<div class="col">
+						<div class="card">
+							<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
+							<div class="card-img-overlay">
+								<span class="bg-white rounded-circle p-4">999</span>
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">M50</h5>
+								<div class="card-subtitle">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<h6 class="card-subtitle pt-2">
+									<i class="fas fa-check-circle check-icon"></i>En stock
+								</h6>
+								<p class="card-text">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+									Exercitationem obcaecati temporibus culpa ea. Fuga expedita
+								</p>
+								<a href="#" class="btn btn-primary">Voir le détail</a>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card">
+							<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
+							<div class="card-img-overlay">
+								<span class="bg-white rounded-circle p-4">999</span>
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">M50</h5>
+								<div class="card-subtitle">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<h6 class="card-subtitle pt-2">
+									<i class="fas fa-check-circle check-icon"></i>En stock
+								</h6>
+								<p class="card-text">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+									Exercitationem obcaecati temporibus culpa ea. Fuga expedita
+								</p>
+								<a href="#" class="btn btn-primary">Voir le détail</a>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card">
+							<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
+							<div class="card-img-overlay">
+								<span class="bg-white rounded-circle p-4">999</span>
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">M50</h5>
+								<div class="card-subtitle">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<h6 class="card-subtitle pt-2">
+									<i class="fas fa-check-circle check-icon"></i>En stock
+								</h6>
+								<p class="card-text">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+									Exercitationem obcaecati temporibus culpa ea. Fuga expedita
+								</p>
+								<a href="#" class="btn btn-primary">Voir le détail</a>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card">
+							<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
+							<div class="card-img-overlay">
+								<span class="bg-white rounded-circle p-4">999</span>
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">M50</h5>
+								<div class="card-subtitle">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<h6 class="card-subtitle pt-2">
+									<i class="fas fa-check-circle check-icon"></i>En stock
+								</h6>
+								<p class="card-text">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+									Exercitationem obcaecati temporibus culpa ea. Fuga expedita
+								</p>
+								<a href="#" class="btn btn-primary">Voir le détail</a>
+							</div>
+						</div>
+					</div>
+					<div class="col">
+						<div class="card">
+							<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
+							<div class="card-img-overlay">
+								<span class="bg-white rounded-circle p-4">999</span>
+							</div>
+							<div class="card-body">
+								<h5 class="card-title">M50</h5>
+								<div class="card-subtitle">
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+									<i class="fa fa-star"></i>
+								</div>
+								<h6 class="card-subtitle pt-2">
+									<i class="fas fa-check-circle check-icon"></i>En stock
+								</h6>
+								<p class="card-text">
+									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+									Exercitationem obcaecati temporibus culpa ea. Fuga expedita
+								</p>
+								<a href="#" class="btn btn-primary">Voir le détail</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</main>
 
 		<script src="./dist/app.bundle.js"></script>
 	</body>
