--- a/index.html
+++ b/index.html
@@ -14,152 +14,261 @@
 		<title>Orinoco</title>
 	</head>
 	<body>
-		<header>
-			<nav>
-				<ul>
-					<li>Logo</li>
-					<li>Panier</li>
-				</ul>
-			</nav>
-		</header>
-		<main>
-			<!--Container for all products-->
-			<div class="container">
-				<div class="row row-cols-1 row-cols-md-3 g-4">
-					<div class="col">
-						<div class="card">
-							<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
-							<div class="card-img-overlay">
-								<span class="bg-white rounded-circle p-4">999</span>
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">M50</h5>
-								<div class="card-subtitle">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
+		<div class="container">
+			<header>
+				<!-- Navbar -->
+				<nav class="navbar navbar-expand-md navbar-light bg-primary">
+					<a class="navbar-brand" href="#">
+						<img
+							src="./images/Orinoco-logo.png"
+							height="50"
+							alt="Orinoco logo"
+						/>
+					</a>
+					<!-- Collapse button -->
+					<button
+						class="navbar-toggler"
+						type="button"
+						data-toggle="collapse"
+						data-target="#basicExampleNav6"
+						aria-controls="basicExampleNav6"
+						aria-expanded="false"
+						aria-label="Toggle navigation"
+					>
+						<span class="navbar-toggler-icon"></span>
+					</button>
+
+					<!-- Links -->
+					<div
+						class="collapse navbar-collapse justify-content-end"
+						id="basicExampleNav6"
+					>
+						<!-- Right -->
+						<ul class="navbar-nav nav-flex-icons">
+							<li class="nav-item dropdown notifications-nav pr-md-3">
+								<a
+									class="nav-link dropdown-toggle"
+									id="navbarDropdownMenuLink151"
+									data-toggle="dropdown"
+								>
+									<span class="badge badge-pill bg-danger">1</span>
+									<span><i class="fas fa-shopping-cart"></i></span>
+								</a>
+								<div class="dropdown-menu dropdown-menu-right">
+									<a class="dropdown-item" href="#">
+										<span>M50 </span>
+									</a>
 								</div>
-								<h6 class="card-subtitle pt-2">
-									<i class="fas fa-check-circle check-icon"></i>En stock
-								</h6>
-								<p class="card-text">
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-									Exercitationem obcaecati temporibus culpa ea. Fuga expedita
-								</p>
-								<a href="#" class="btn btn-primary">Voir le détail</a>
+							</li>
+						</ul>
+					</div>
+					<!-- Links -->
+				</nav>
+				<!-- Navbar -->
+			</header>
+			<main>
+				<!--Container for all products-->
+				<div class="container">
+					<div class="row row-cols-1 row-cols-md-3 g-4">
+						<div class="col">
+							<div class="card">
+								<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
+								<div class="card-img-overlay">
+									<span
+										class="
+											bg-primary
+											text-white
+											rounded-circle
+											p-4
+											position-absolute
+											top-50
+											end-0
+											translate-middle-y
+										"
+										>999</span
+									>
+								</div>
+								<div class="card-body">
+									<h5 class="card-title">M50</h5>
+									<div class="card-subtitle">
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star"></i>
+									</div>
+									<h6 class="card-subtitle pt-2">
+										<i class="fas fa-check-circle check-icon text-success"></i
+										>En stock
+									</h6>
+									<p class="card-text">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Exercitationem obcaecati temporibus culpa ea. Fuga expedita
+									</p>
+									<a href="#" class="btn btn-primary">Voir le détail</a>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col">
-						<div class="card">
-							<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
-							<div class="card-img-overlay">
-								<span class="bg-white rounded-circle p-4">999</span>
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">M50</h5>
-								<div class="card-subtitle">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
+						<div class="col">
+							<div class="card">
+								<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
+								<div class="card-img-overlay">
+									<span
+										class="
+											bg-primary
+											text-white
+											rounded-circle
+											p-4
+											position-absolute
+											top-50
+											end-0
+											translate-middle-y
+										"
+										>999</span
+									>
 								</div>
-								<h6 class="card-subtitle pt-2">
-									<i class="fas fa-check-circle check-icon"></i>En stock
-								</h6>
-								<p class="card-text">
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-									Exercitationem obcaecati temporibus culpa ea. Fuga expedita
-								</p>
-								<a href="#" class="btn btn-primary">Voir le détail</a>
+								<div class="card-body">
+									<h5 class="card-title">M50</h5>
+									<div class="card-subtitle">
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star"></i>
+									</div>
+									<h6 class="card-subtitle pt-2">
+										<i class="fas fa-check-circle check-icon text-success"></i
+										>En stock
+									</h6>
+									<p class="card-text">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Exercitationem obcaecati temporibus culpa ea. Fuga expedita
+									</p>
+									<a href="#" class="btn btn-primary">Voir le détail</a>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col">
-						<div class="card">
-							<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
-							<div class="card-img-overlay">
-								<span class="bg-white rounded-circle p-4">999</span>
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">M50</h5>
-								<div class="card-subtitle">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
+						<div class="col">
+							<div class="card">
+								<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
+								<div class="card-img-overlay">
+									<span
+										class="
+											bg-primary
+											text-white
+											rounded-circle
+											p-4
+											position-absolute
+											top-50
+											end-0
+											translate-middle-y
+										"
+										>999</span
+									>
 								</div>
-								<h6 class="card-subtitle pt-2">
-									<i class="fas fa-check-circle check-icon"></i>En stock
-								</h6>
-								<p class="card-text">
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-									Exercitationem obcaecati temporibus culpa ea. Fuga expedita
-								</p>
-								<a href="#" class="btn btn-primary">Voir le détail</a>
+								<div class="card-body">
+									<h5 class="card-title">M50</h5>
+									<div class="card-subtitle">
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star"></i>
+									</div>
+									<h6 class="card-subtitle pt-2">
+										<i class="fas fa-check-circle check-icon text-success"></i
+										>En stock
+									</h6>
+									<p class="card-text">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Exercitationem obcaecati temporibus culpa ea. Fuga expedita
+									</p>
+									<a href="#" class="btn btn-primary">Voir le détail</a>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col">
-						<div class="card">
-							<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
-							<div class="card-img-overlay">
-								<span class="bg-white rounded-circle p-4">999</span>
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">M50</h5>
-								<div class="card-subtitle">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
+						<div class="col">
+							<div class="card">
+								<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
+								<div class="card-img-overlay">
+									<span
+										class="
+											bg-primary
+											text-white
+											rounded-circle
+											p-4
+											position-absolute
+											top-50
+											end-0
+											translate-middle-y
+										"
+										>999</span
+									>
 								</div>
-								<h6 class="card-subtitle pt-2">
-									<i class="fas fa-check-circle check-icon"></i>En stock
-								</h6>
-								<p class="card-text">
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-									Exercitationem obcaecati temporibus culpa ea. Fuga expedita
-								</p>
-								<a href="#" class="btn btn-primary">Voir le détail</a>
+								<div class="card-body">
+									<h5 class="card-title">M50</h5>
+									<div class="card-subtitle">
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star"></i>
+									</div>
+									<h6 class="card-subtitle pt-2">
+										<i class="fas fa-check-circle check-icon text-success"></i
+										>En stock
+									</h6>
+									<p class="card-text">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Exercitationem obcaecati temporibus culpa ea. Fuga expedita
+									</p>
+									<a href="#" class="btn btn-primary">Voir le détail</a>
+								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col">
-						<div class="card">
-							<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
-							<div class="card-img-overlay">
-								<span class="bg-white rounded-circle p-4">999</span>
-							</div>
-							<div class="card-body">
-								<h5 class="card-title">M50</h5>
-								<div class="card-subtitle">
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
-									<i class="fa fa-star"></i>
+						<div class="col">
+							<div class="card">
+								<img class="card-img-top" src="./images/vcam_1.jpg" alt="" />
+								<div class="card-img-overlay">
+									<span
+										class="
+											bg-primary
+											text-white
+											rounded-circle
+											p-4
+											position-absolute
+											top-50
+											end-0
+											translate-middle-y
+										"
+										>999</span
+									>
 								</div>
-								<h6 class="card-subtitle pt-2">
-									<i class="fas fa-check-circle check-icon"></i>En stock
-								</h6>
-								<p class="card-text">
-									Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-									Exercitationem obcaecati temporibus culpa ea. Fuga expedita
-								</p>
-								<a href="#" class="btn btn-primary">Voir le détail</a>
+								<div class="card-body">
+									<h5 class="card-title">M50</h5>
+									<div class="card-subtitle">
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star text-warning"></i>
+										<i class="fa fa-star"></i>
+									</div>
+									<h6 class="card-subtitle pt-2">
+										<i class="fas fa-check-circle check-icon text-success"></i
+										>En stock
+									</h6>
+									<p class="card-text">
+										Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+										Exercitationem obcaecati temporibus culpa ea. Fuga expedita
+									</p>
+									<a href="#" class="btn btn-primary">Voir le détail</a>
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</main>
-
+			</main>
+		</div>
 		<script src="./dist/app.bundle.js"></script>
 	</body>
 </html>
