--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 						/>
 					</a>
 					<!-- Collapse button -->
+					<!--This is a test-->
 					<button
 						class="navbar-toggler"
 						type="button"
