--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 					<!-- Links -->
 				</nav>
 				<!-- Navbar -->
+				<!--test test test-->
 			</header>
 			<main>
 				<!--Container for all products-->
